--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,4 +27,5 @@ jobs:
           NODE_ENV: production
 
       - name: Deploy to GitHub Pages
+        id: deployment
         uses: actions/deploy-pages@v3
