--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,9 +32,8 @@ jobs:
           npm run build 
           
       # Runs a single command using the runners shell
-      - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@releases/v4
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN  }} # Settings > Secret 建立的 ACCESS_TOKEN，推同個 repo 的話可以不需要
-          BRANCH: gh-pages # deploy 到 gh-pages 這個分支
-          FOLDER: ./dist # build 後的資料夾
+          github_token: ${{ secrets.GITHUB_TOKEN }}  # 使用 GitHub 提供的默认令牌
+          publish_dir: ./dist  # 指定构建后的目录
