--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,33 +1,39 @@
-# Optional - The name of the workflow as it will appear in the "Actions" tab of the GitHub repository. If this field is omitted, the name of the workflow file will be used instead.
-name: learn-github-actions
-# Optional - The name for workflow runs generated from the workflow, which will appear in the list of workflow runs on your repository's "Actions" tab. This example uses an expression with the `github` context to display the username of the actor that triggered the workflow run. For more information, see "[AUTOTITLE](/actions/using-workflows/workflow-syntax-for-github-actions#run-name)."
-run-name: ${{ github.actor }} is learning GitHub Actions
+# This is a basic workflow to help you get started with Actions
+name: deploy
 
-# Specifies the trigger for this workflow. This example uses the `push` event, so a workflow run is triggered every time someone pushes a change to the repository or merges a pull request.  This is triggered by a push to every branch; for examples of syntax that runs only on pushes to specific branches, paths, or tags, see "[AUTOTITLE](/actions/reference/workflow-syntax-for-github-actions#onpushpull_requestpull_request_targetpathspaths-ignore)."
-on: [push]
+# Controls when the action will run. 
+on:
+  # Triggers the workflow on push or pull request events but only for the main branch
+  # push:
+  #   branches:
+  #     - master
+  # pull_request:
+  #   branches:
+  #     - master
 
-# Groups together all the jobs that run in the `learn-github-actions` workflow.
-  jobs:
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
-# Defines a job named `check-bats-version`. The child keys will define properties of the job.
-  check-bats-version:
-
-# Configures the job to run on the latest version of an Ubuntu Linux runner. This means that the job will execute on a fresh virtual machine hosted by GitHub. For syntax examples using other runners, see "[AUTOTITLE](/actions/reference/workflow-syntax-for-github-actions#jobsjob_idruns-on)"
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+jobs:
+  # This workflow contains a single job called "build"
+  build:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-# Groups together all the steps that run in the `check-bats-version` job. Each item nested under this section is a separate action or shell script.
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-
-# The `uses` keyword specifies that this step will run `v4` of the `actions/checkout` action. This is an action that checks out your repository onto the runner, allowing you to run scripts or other actions against your code (such as build and test tools). You should use the checkout action any time your workflow will use the repository's code.
-      - uses: actions/checkout@v4
-
-# This step uses the `actions/setup-node@v3` action to install the specified version of the Node.js. (This example uses version 14.) This puts both the `node` and `npm` commands in your `PATH`.
-      - uses: actions/setup-node@v3
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v3
+      
+      - name: Install & Build # 執行指令
+        run: |
+          npm install
+          npm run build 
+          
+      # Runs a single command using the runners shell
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          node-version: '14'
-
-# The `run` keyword tells the job to execute a command on the runner. In this case, you are using `npm` to install the `bats` software testing package.
-      - run: npm install -g bats
-
-# Finally, you'll run the `bats` command with a parameter that outputs the software version.
-      - run: bats -v
+          github_token: ${{ secrets.ACCESS_TOKEN }}  # 使用 GitHub 提供的默认令牌
+          publish_dir: ./dist  # 指定构建后的目录
