--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,16 +24,25 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
-      
-      - name: Install & Build # 執行指令
-        run: |
-          npm install
-          npm run build 
-          
-      # Runs a single command using the runners shell
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v3
         with:
-          github_token: ${{ secrets.ACCESS_TOKEN }}  # 使用 GitHub 提供的默认令牌
-          publish_dir: ./dist  # 指定构建后的目录
+          node-version: '14'
+
+      - run: npm install -g bats
+
+      - run: bats -v
+
+
+      # - name: Install & Build # 執行指令
+      #   run: |
+      #     npm install
+      #     npm run build 
+          
+      # # Runs a single command using the runners shell
+      # - name: Deploy to GitHub Pages
+      #   uses: peaceiris/actions-gh-pages@v3
+      #   with:
+      #     github_token: ${{ secrets.ACCESS_TOKEN }}  # 使用 GitHub 提供的默认令牌
+      #     publish_dir: ./dist  # 指定构建后的目录
